--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.5"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.15.5",
+    "tailwindcss": "^3.4.11"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^8.5.0",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-astro": "^1.2.4"
   }
 }
